@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.9975-10
-Date: 2007-02-05
+Version: 0.9975-11
+Date: 2007-02-??
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: <Matrix-authors@R-project.org>
