@@ -1,3 +1,7 @@
+2007-02-12  Douglas Bates  <bates@stat.wisc.edu>
+
+	* R/CHMfactor.R: Add image method (coercion to sparseMatrix).
+
 2007-02-05  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Date, Version): 0.9975-10 with new date.
